[package]
name = "vivarium_usdt"
version = "0.1.0"
edition = "2021"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2" }
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }

[target.'cfg(target_os = "linux")'.dependencies]
probe = "0.5.2"

[build-dependencies]
rb-sys-env = "0.2.2"

[dev-dependencies]
rb-sys-test-helpers = { version = "0.2.2" }
